@@ -16,3 +16,4 @@ Remove ARMALLHF.setVerbose/getVerbose
 Remove CleaningStrategy.setVerbose/getVerbose
 Remove ApproximationAlgorithm.setVerbose/getVerbose
 Remove EllipticalDistribution.setCorrelation/getCorrelation
+Remove EllipticalDistribution.setMean
