@@ -107,6 +107,7 @@ distribution= Student(nu = 3, mu = [0,0,0,0,0], sigma = [1.5,0.4,1,2.5,1], R = 5
  [ -0.5  0    1    0    0   ]
  [  0    0    0    1   -0.2 ]
  [  0    0    0   -0.2  1   ]])"
+
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::Student::getNu
